# CLM-Evaluation

./: LICENSE  README.md  pyproject.toml
clm/: __init__.py  mask_predict.py  setup.py  util.py
clm/api/: api.py  dto.py
clm/clms/: __init__.py  codebert.py  codegeex2.py  codegen.py  codegen2.py  codegen25.py  codellama.py  codeshell.py  codet5.py  codet5p.py  gpt_neo.py  incoder.py  model_factory.py  plbart.py  refact.py  santacoder.py  starcoder.py  stopping_conditions.py  unixcoder.py
clm/inputs/: abs_expr.py  abs_stat.py  abs_stat_multi.py  abs_stat_start.py  avg.py  bitcount1.java  bitcount2.java  bitcount_prefix.java  chart1.local  codegen2_example.py  codet5_mask_example.py  codet5p_mask_example.py  gamma.local  generate_quicksort.py  lookup.java  math40.local  plbart_add_three.py  unixcoder_mask_example.py
clm/model/: __init__.py  mask_predict.py
experiments/clm-infill-benchmark/: README.md  benchmark_clm_infilling.py  generate_prompts.py  get_infill_uniqueness.py  get_overlap_analysis.py  print_results.py
